// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Verification Scenarios Correctness ThemeScenario matches snapshot 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Current Theme: DARK                                                                              │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Verification Scenarios Correctness AlertScenario matches snapshot 1`] = `
"
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ │
│ │  SYSTEM STATUS                                                                               │ │
│ │                                                                                              │ │
│ │ ✓Connection to database has been established successfully.                                   │ │
│ │                                                                                              │ │
│ └──────────────────────────────────────────────────────────────────────────────────────────────┘ │
│                                                                                                  │
│ ┌───────────────────────────────────────────────────┐                                            │
│ │  CRITICAL FAULT                                   │                                            │
│ │                                                   │                                            │
│ │ ✗Python PyO3 FFI interpreter failed to bind port. │                                            │
│ │                                                   │                                            │
│ └───────────────────────────────────────────────────┘                                            │
│                                                                                                  │
│ Success Label    OK    Warning Label    WARN    Error Label    FAIL                              │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Verification Scenarios Correctness SpinnerScenario matches snapshot 1`] = `
"
⠋Pulsing shimmer breathing (claude/shimmer)...

⠋Loading model weights...
"
`;

exports[`Verification Scenarios Correctness ResizeScenario matches snapshot at different widths 1`] = `
"┌───────────────────────────────────────────┐
│                                           │
│ Resize Scenario (Width: 45 columns)       │
│                                           │
│ ╭───────────────────────────────────────╮ │
│ │                                       │ │
│ │ Flex Grow Content A                   │ │
│ │                                       │ │
│ ╰───────────────────────────────────────╯ │
│                                           │
└───────────────────────────────────────────┘"
`;

exports[`Verification Scenarios Correctness ResizeScenario matches snapshot at different widths 2`] = `
"┌──────────────────────────────────────────────────────────────────────────────┐
│                                                                              │
│ Resize Scenario (Width: 80 columns)                                          │
│                                                                              │
│ ╭───────────────────────╮  ╭───────────────────────────────────────────────╮ │
│ │                       │  │                                               │ │
│ │ Flex Grow Content A   │  │ Flex Grow Content B (Hidden when width < 60)  │ │
│ │                       │  │                                               │ │
│ ╰───────────────────────╯  ╰───────────────────────────────────────────────╯ │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`Verification Scenarios Correctness ToastScenario matches snapshot when toggled 1`] = `
"
Toast Scenario Box:


"
`;

exports[`Verification Scenarios Correctness ToastScenario matches snapshot when toggled 2`] = `
"
Toast Scenario Box:
                                       ╭────────────────────╮
                                       │  Test Toast Alert  │
                                       ╰────────────────────╯
"
`;

exports[`Verification Scenarios Correctness HistoryScenario matches snapshot at different index positions 1`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Command History Navigation                                                                       │
│ ➔  ingest first item                                                                             │
│    query database                                                                                │
│    ingest second item                                                                            │
│    query postgres                                                                                │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`Verification Scenarios Correctness HistoryScenario matches snapshot at different index positions 2`] = `
"╭──────────────────────────────────────────────────────────────────────────────────────────────────╮
│                                                                                                  │
│ Command History Navigation                                                                       │
│    ingest first item                                                                             │
│    query database                                                                                │
│ ➔  ingest second item                                                                            │
│    query postgres                                                                                │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯"
`;

exports[`VerificationApp Golden Interaction Sequence initial render matches snapshot 1`] = `
"╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                  ║
║                                                                                                  ║
║                                  ____   ____    _     ___ _   _                                  ║
║                                 |  _ \\ |  _ \\  / \\   |_ _| \\ | |                                 ║
║                                 | |_) || |_) |/ _ \\   | ||  \\| |                                 ║
║                                 |  _ < |  _ <___  \\   | || |\\  |                                 ║
║                                 |_| \\_\\_| \\_\\_/ \\_\\ |___|_| \\_|                                  ║
║                                  Memory Companion CLI · v0.1.0                                   ║
║                                                                                                  ║
║ ───────────────────────────────── Manual Verification Harness  ───────────────────────────────── ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Press t to cycle themes · Current Theme: DARK                                                │ ║
║ │ Press s to toggle toast notification                                                         │ ║
║ │ Press ↑ / ↓ to navigate command history                                                      │ ║
║ │ Press ← / → to resize layout width (80 cols)                                                 │ ║
║ │ Press q or Esc to quit verification harness                                                  │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Current Theme: DARK                                                                          │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────── Alert & Badges Scenario  ─────────────────────────────────── ║
║                                                                                                  ║
║ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ ║
║ │                                                                                              │ ║
║ │ ┌──────────────────────────────────────────────────────────────────────────────────────────┐ │ ║
║ │ │  SYSTEM STATUS                                                                           │ │ ║
║ │ │                                                                                          │ │ ║
║ │ │ ✓Connection to database has been established successfully.                               │ │ ║
║ │ │                                                                                          │ │ ║
║ │ └──────────────────────────────────────────────────────────────────────────────────────────┘ │ ║
║ │                                                                                              │ ║
║ │ ┌───────────────────────────────────────────────────┐                                        │ ║
║ │ │  CRITICAL FAULT                                   │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ │ ✗Python PyO3 FFI interpreter failed to bind port. │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ └───────────────────────────────────────────────────┘                                        │ ║
║ │                                                                                              │ ║
║ │ Success Label    OK    Warning Label    WARN    Error Label    FAIL                          │ ║
║ │                                                                                              │ ║
║ └──────────────────────────────────────────────────────────────────────────────────────────────┘ ║
║ ───────────────────────────────── Toast Notification Scenario  ───────────────────────────────── ║
║                                                                                                  ║
║ Toast Scenario Box:                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║ ─────────────────────────────────────── Spinner Scenario ─────────────────────────────────────── ║
║                                                                                                  ║
║ ⠋Pulsing shimmer breathing (claude/shimmer)...                                                   ║
║                                                                                                  ║
║ ⠋Loading model weights...                                                                        ║
║                                                                                                  ║
║ ─────────────────────────────────── Command History Scenario ─────────────────────────────────── ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Command History Navigation                                                                   │ ║
║ │ ➔  ingest first item                                                                         │ ║
║ │    query database                                                                            │ ║
║ │    ingest second item                                                                        │ ║
║ │    query postgres                                                                            │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────────── Resize Scenario  ─────────────────────────────────────── ║
║ ┌──────────────────────────────────────────────────────────────────────────────┐                 ║
║ │                                                                              │                 ║
║ │ Resize Scenario (Width: 80 columns)                                          │                 ║
║ │                                                                              │                 ║
║ │ ╭───────────────────────╮  ╭───────────────────────────────────────────────╮ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ │ Flex Grow Content A   │  │ Flex Grow Content B (Hidden when width < 60)  │ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ ╰───────────────────────╯  ╰───────────────────────────────────────────────╯ │                 ║
║ │                                                                              │                 ║
║ └──────────────────────────────────────────────────────────────────────────────┘                 ║
║  [Plan]  Gemini 3.5 Flash        In: 2450 · Out: 890  $0.0125       Rate: ██░░░  'exit' to quit  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`VerificationApp Golden Interaction Sequence cycling themes changes rendering output 1`] = `
"╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                  ║
║                                                                                                  ║
║                                  ____   ____    _     ___ _   _                                  ║
║                                 |  _ \\ |  _ \\  / \\   |_ _| \\ | |                                 ║
║                                 | |_) || |_) |/ _ \\   | ||  \\| |                                 ║
║                                 |  _ < |  _ <___  \\   | || |\\  |                                 ║
║                                 |_| \\_\\_| \\_\\_/ \\_\\ |___|_| \\_|                                  ║
║                                  Memory Companion CLI · v0.1.0                                   ║
║                                                                                                  ║
║ ───────────────────────────────── Manual Verification Harness  ───────────────────────────────── ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Press t to cycle themes · Current Theme: LIGHT                                               │ ║
║ │ Press s to toggle toast notification                                                         │ ║
║ │ Press ↑ / ↓ to navigate command history                                                      │ ║
║ │ Press ← / → to resize layout width (80 cols)                                                 │ ║
║ │ Press q or Esc to quit verification harness                                                  │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Current Theme: LIGHT                                                                         │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────── Alert & Badges Scenario  ─────────────────────────────────── ║
║                                                                                                  ║
║ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ ║
║ │                                                                                              │ ║
║ │ ┌──────────────────────────────────────────────────────────────────────────────────────────┐ │ ║
║ │ │  SYSTEM STATUS                                                                           │ │ ║
║ │ │                                                                                          │ │ ║
║ │ │ ✓Connection to database has been established successfully.                               │ │ ║
║ │ │                                                                                          │ │ ║
║ │ └──────────────────────────────────────────────────────────────────────────────────────────┘ │ ║
║ │                                                                                              │ ║
║ │ ┌───────────────────────────────────────────────────┐                                        │ ║
║ │ │  CRITICAL FAULT                                   │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ │ ✗Python PyO3 FFI interpreter failed to bind port. │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ └───────────────────────────────────────────────────┘                                        │ ║
║ │                                                                                              │ ║
║ │ Success Label    OK    Warning Label    WARN    Error Label    FAIL                          │ ║
║ │                                                                                              │ ║
║ └──────────────────────────────────────────────────────────────────────────────────────────────┘ ║
║ ───────────────────────────────── Toast Notification Scenario  ───────────────────────────────── ║
║                                                                                                  ║
║ Toast Scenario Box:                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║ ─────────────────────────────────────── Spinner Scenario ─────────────────────────────────────── ║
║                                                                                                  ║
║ ⠋Pulsing shimmer breathing (claude/shimmer)...                                                   ║
║                                                                                                  ║
║ ⠋Loading model weights...                                                                        ║
║                                                                                                  ║
║ ─────────────────────────────────── Command History Scenario ─────────────────────────────────── ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Command History Navigation                                                                   │ ║
║ │ ➔  ingest first item                                                                         │ ║
║ │    query database                                                                            │ ║
║ │    ingest second item                                                                        │ ║
║ │    query postgres                                                                            │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────────── Resize Scenario  ─────────────────────────────────────── ║
║ ┌──────────────────────────────────────────────────────────────────────────────┐                 ║
║ │                                                                              │                 ║
║ │ Resize Scenario (Width: 80 columns)                                          │                 ║
║ │                                                                              │                 ║
║ │ ╭───────────────────────╮  ╭───────────────────────────────────────────────╮ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ │ Flex Grow Content A   │  │ Flex Grow Content B (Hidden when width < 60)  │ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ ╰───────────────────────╯  ╰───────────────────────────────────────────────╯ │                 ║
║ │                                                                              │                 ║
║ └──────────────────────────────────────────────────────────────────────────────┘                 ║
║  [Plan]  Gemini 3.5 Flash        In: 2450 · Out: 890  $0.0125       Rate: ██░░░  'exit' to quit  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`VerificationApp Golden Interaction Sequence cycling themes changes rendering output 2`] = `
"╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                  ║
║                                                                                                  ║
║                                  ____   ____    _     ___ _   _                                  ║
║                                 |  _ \\ |  _ \\  / \\   |_ _| \\ | |                                 ║
║                                 | |_) || |_) |/ _ \\   | ||  \\| |                                 ║
║                                 |  _ < |  _ <___  \\   | || |\\  |                                 ║
║                                 |_| \\_\\_| \\_\\_/ \\_\\ |___|_| \\_|                                  ║
║                                  Memory Companion CLI · v0.1.0                                   ║
║                                                                                                  ║
║ ───────────────────────────────── Manual Verification Harness  ───────────────────────────────── ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Press t to cycle themes · Current Theme: DARK-DALTONIZED                                     │ ║
║ │ Press s to toggle toast notification                                                         │ ║
║ │ Press ↑ / ↓ to navigate command history                                                      │ ║
║ │ Press ← / → to resize layout width (80 cols)                                                 │ ║
║ │ Press q or Esc to quit verification harness                                                  │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Current Theme: DARK-DALTONIZED                                                               │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────── Alert & Badges Scenario  ─────────────────────────────────── ║
║                                                                                                  ║
║ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ ║
║ │                                                                                              │ ║
║ │ ┌──────────────────────────────────────────────────────────────────────────────────────────┐ │ ║
║ │ │  SYSTEM STATUS                                                                           │ │ ║
║ │ │                                                                                          │ │ ║
║ │ │ ✓Connection to database has been established successfully.                               │ │ ║
║ │ │                                                                                          │ │ ║
║ │ └──────────────────────────────────────────────────────────────────────────────────────────┘ │ ║
║ │                                                                                              │ ║
║ │ ┌───────────────────────────────────────────────────┐                                        │ ║
║ │ │  CRITICAL FAULT                                   │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ │ ✗Python PyO3 FFI interpreter failed to bind port. │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ └───────────────────────────────────────────────────┘                                        │ ║
║ │                                                                                              │ ║
║ │ Success Label    OK    Warning Label    WARN    Error Label    FAIL                          │ ║
║ │                                                                                              │ ║
║ └──────────────────────────────────────────────────────────────────────────────────────────────┘ ║
║ ───────────────────────────────── Toast Notification Scenario  ───────────────────────────────── ║
║                                                                                                  ║
║ Toast Scenario Box:                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║ ─────────────────────────────────────── Spinner Scenario ─────────────────────────────────────── ║
║                                                                                                  ║
║ ⠋Pulsing shimmer breathing (claude/shimmer)...                                                   ║
║                                                                                                  ║
║ ⠋Loading model weights...                                                                        ║
║                                                                                                  ║
║ ─────────────────────────────────── Command History Scenario ─────────────────────────────────── ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Command History Navigation                                                                   │ ║
║ │ ➔  ingest first item                                                                         │ ║
║ │    query database                                                                            │ ║
║ │    ingest second item                                                                        │ ║
║ │    query postgres                                                                            │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────────── Resize Scenario  ─────────────────────────────────────── ║
║ ┌──────────────────────────────────────────────────────────────────────────────┐                 ║
║ │                                                                              │                 ║
║ │ Resize Scenario (Width: 80 columns)                                          │                 ║
║ │                                                                              │                 ║
║ │ ╭───────────────────────╮  ╭───────────────────────────────────────────────╮ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ │ Flex Grow Content A   │  │ Flex Grow Content B (Hidden when width < 60)  │ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ ╰───────────────────────╯  ╰───────────────────────────────────────────────╯ │                 ║
║ │                                                                              │                 ║
║ └──────────────────────────────────────────────────────────────────────────────┘                 ║
║  [Plan]  Gemini 3.5 Flash        In: 2450 · Out: 890  $0.0125       Rate: ██░░░  'exit' to quit  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`VerificationApp Golden Interaction Sequence toggling toast displays/hides the Toast element 1`] = `
"╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                  ║
║                                                                                                  ║
║                                  ____   ____    _     ___ _   _                                  ║
║                                 |  _ \\ |  _ \\  / \\   |_ _| \\ | |                                 ║
║                                 | |_) || |_) |/ _ \\   | ||  \\| |                                 ║
║                                 |  _ < |  _ <___  \\   | || |\\  |                                 ║
║                                 |_| \\_\\_| \\_\\_/ \\_\\ |___|_| \\_|                                  ║
║                                  Memory Companion CLI · v0.1.0                                   ║
║                                                                                                  ║
║ ───────────────────────────────── Manual Verification Harness  ───────────────────────────────── ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Press t to cycle themes · Current Theme: DARK                                                │ ║
║ │ Press s to toggle toast notification                                                         │ ║
║ │ Press ↑ / ↓ to navigate command history                                                      │ ║
║ │ Press ← / → to resize layout width (80 cols)                                                 │ ║
║ │ Press q or Esc to quit verification harness                                                  │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Current Theme: DARK                                                                          │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────── Alert & Badges Scenario  ─────────────────────────────────── ║
║                                                                                                  ║
║ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ ║
║ │                                                                                              │ ║
║ │ ┌──────────────────────────────────────────────────────────────────────────────────────────┐ │ ║
║ │ │  SYSTEM STATUS                                                                           │ │ ║
║ │ │                                                                                          │ │ ║
║ │ │ ✓Connection to database has been established successfully.                               │ │ ║
║ │ │                                                                                          │ │ ║
║ │ └──────────────────────────────────────────────────────────────────────────────────────────┘ │ ║
║ │                                                                                              │ ║
║ │ ┌───────────────────────────────────────────────────┐                                        │ ║
║ │ │  CRITICAL FAULT                                   │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ │ ✗Python PyO3 FFI interpreter failed to bind port. │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ └───────────────────────────────────────────────────┘                                        │ ║
║ │                                                                                              │ ║
║ │ Success Label    OK    Warning Label    WARN    Error Label    FAIL                          │ ║
║ │                                                                                              │ ║
║ └──────────────────────────────────────────────────────────────────────────────────────────────┘ ║
║ ───────────────────────────────── Toast Notification Scenario  ───────────────────────────────── ║
║                                                                                                  ║
║ Toast Scenario Box:                                                                              ║
║                                ╭─────────────────────────────────╮                               ║
║                                │  Toast Notification Triggered!  │                               ║
║                                ╰─────────────────────────────────╯                               ║
║                                                                                                  ║
║ ─────────────────────────────────────── Spinner Scenario ─────────────────────────────────────── ║
║                                                                                                  ║
║ ⠋Pulsing shimmer breathing (claude/shimmer)...                                                   ║
║                                                                                                  ║
║ ⠋Loading model weights...                                                                        ║
║                                                                                                  ║
║ ─────────────────────────────────── Command History Scenario ─────────────────────────────────── ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Command History Navigation                                                                   │ ║
║ │ ➔  ingest first item                                                                         │ ║
║ │    query database                                                                            │ ║
║ │    ingest second item                                                                        │ ║
║ │    query postgres                                                                            │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────────── Resize Scenario  ─────────────────────────────────────── ║
║ ┌──────────────────────────────────────────────────────────────────────────────┐                 ║
║ │                                                                              │                 ║
║ │ Resize Scenario (Width: 80 columns)                                          │                 ║
║ │                                                                              │                 ║
║ │ ╭───────────────────────╮  ╭───────────────────────────────────────────────╮ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ │ Flex Grow Content A   │  │ Flex Grow Content B (Hidden when width < 60)  │ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ ╰───────────────────────╯  ╰───────────────────────────────────────────────╯ │                 ║
║ │                                                                              │                 ║
║ └──────────────────────────────────────────────────────────────────────────────┘                 ║
║  [Plan]  Gemini 3.5 Flash        In: 2450 · Out: 890  $0.0125       Rate: ██░░░  'exit' to quit  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`VerificationApp Golden Interaction Sequence navigating command history with arrow keys updates active selection 1`] = `
"╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                  ║
║                                                                                                  ║
║                                  ____   ____    _     ___ _   _                                  ║
║                                 |  _ \\ |  _ \\  / \\   |_ _| \\ | |                                 ║
║                                 | |_) || |_) |/ _ \\   | ||  \\| |                                 ║
║                                 |  _ < |  _ <___  \\   | || |\\  |                                 ║
║                                 |_| \\_\\_| \\_\\_/ \\_\\ |___|_| \\_|                                  ║
║                                  Memory Companion CLI · v0.1.0                                   ║
║                                                                                                  ║
║ ───────────────────────────────── Manual Verification Harness  ───────────────────────────────── ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Press t to cycle themes · Current Theme: DARK                                                │ ║
║ │ Press s to toggle toast notification                                                         │ ║
║ │ Press ↑ / ↓ to navigate command history                                                      │ ║
║ │ Press ← / → to resize layout width (80 cols)                                                 │ ║
║ │ Press q or Esc to quit verification harness                                                  │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Current Theme: DARK                                                                          │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────── Alert & Badges Scenario  ─────────────────────────────────── ║
║                                                                                                  ║
║ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ ║
║ │                                                                                              │ ║
║ │ ┌──────────────────────────────────────────────────────────────────────────────────────────┐ │ ║
║ │ │  SYSTEM STATUS                                                                           │ │ ║
║ │ │                                                                                          │ │ ║
║ │ │ ✓Connection to database has been established successfully.                               │ │ ║
║ │ │                                                                                          │ │ ║
║ │ └──────────────────────────────────────────────────────────────────────────────────────────┘ │ ║
║ │                                                                                              │ ║
║ │ ┌───────────────────────────────────────────────────┐                                        │ ║
║ │ │  CRITICAL FAULT                                   │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ │ ✗Python PyO3 FFI interpreter failed to bind port. │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ └───────────────────────────────────────────────────┘                                        │ ║
║ │                                                                                              │ ║
║ │ Success Label    OK    Warning Label    WARN    Error Label    FAIL                          │ ║
║ │                                                                                              │ ║
║ └──────────────────────────────────────────────────────────────────────────────────────────────┘ ║
║ ───────────────────────────────── Toast Notification Scenario  ───────────────────────────────── ║
║                                                                                                  ║
║ Toast Scenario Box:                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║ ─────────────────────────────────────── Spinner Scenario ─────────────────────────────────────── ║
║                                                                                                  ║
║ ⠋Pulsing shimmer breathing (claude/shimmer)...                                                   ║
║                                                                                                  ║
║ ⠋Loading model weights...                                                                        ║
║                                                                                                  ║
║ ─────────────────────────────────── Command History Scenario ─────────────────────────────────── ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Command History Navigation                                                                   │ ║
║ │    ingest first item                                                                         │ ║
║ │    query database                                                                            │ ║
║ │ ➔  ingest second item                                                                        │ ║
║ │    query postgres                                                                            │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────────── Resize Scenario  ─────────────────────────────────────── ║
║ ┌──────────────────────────────────────────────────────────────────────────────┐                 ║
║ │                                                                              │                 ║
║ │ Resize Scenario (Width: 80 columns)                                          │                 ║
║ │                                                                              │                 ║
║ │ ╭───────────────────────╮  ╭───────────────────────────────────────────────╮ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ │ Flex Grow Content A   │  │ Flex Grow Content B (Hidden when width < 60)  │ │                 ║
║ │ │                       │  │                                               │ │                 ║
║ │ ╰───────────────────────╯  ╰───────────────────────────────────────────────╯ │                 ║
║ │                                                                              │                 ║
║ └──────────────────────────────────────────────────────────────────────────────┘                 ║
║  [Plan]  Gemini 3.5 Flash        In: 2450 · Out: 890  $0.0125       Rate: ██░░░  'exit' to quit  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;

exports[`VerificationApp Golden Interaction Sequence resizing width with Left and Right Arrows updates width scenario 1`] = `
"╔══════════════════════════════════════════════════════════════════════════════════════════════════╗
║                                                                                                  ║
║                                                                                                  ║
║                                  ____   ____    _     ___ _   _                                  ║
║                                 |  _ \\ |  _ \\  / \\   |_ _| \\ | |                                 ║
║                                 | |_) || |_) |/ _ \\   | ||  \\| |                                 ║
║                                 |  _ < |  _ <___  \\   | || |\\  |                                 ║
║                                 |_| \\_\\_| \\_\\_/ \\_\\ |___|_| \\_|                                  ║
║                                  Memory Companion CLI · v0.1.0                                   ║
║                                                                                                  ║
║ ───────────────────────────────── Manual Verification Harness  ───────────────────────────────── ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Press t to cycle themes · Current Theme: DARK                                                │ ║
║ │ Press s to toggle toast notification                                                         │ ║
║ │ Press ↑ / ↓ to navigate command history                                                      │ ║
║ │ Press ← / → to resize layout width (40 cols)                                                 │ ║
║ │ Press q or Esc to quit verification harness                                                  │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║                                                                                                  ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Current Theme: DARK                                                                          │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────── Alert & Badges Scenario  ─────────────────────────────────── ║
║                                                                                                  ║
║ ┌──────────────────────────────────────────────────────────────────────────────────────────────┐ ║
║ │                                                                                              │ ║
║ │ ┌──────────────────────────────────────────────────────────────────────────────────────────┐ │ ║
║ │ │  SYSTEM STATUS                                                                           │ │ ║
║ │ │                                                                                          │ │ ║
║ │ │ ✓Connection to database has been established successfully.                               │ │ ║
║ │ │                                                                                          │ │ ║
║ │ └──────────────────────────────────────────────────────────────────────────────────────────┘ │ ║
║ │                                                                                              │ ║
║ │ ┌───────────────────────────────────────────────────┐                                        │ ║
║ │ │  CRITICAL FAULT                                   │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ │ ✗Python PyO3 FFI interpreter failed to bind port. │                                        │ ║
║ │ │                                                   │                                        │ ║
║ │ └───────────────────────────────────────────────────┘                                        │ ║
║ │                                                                                              │ ║
║ │ Success Label    OK    Warning Label    WARN    Error Label    FAIL                          │ ║
║ │                                                                                              │ ║
║ └──────────────────────────────────────────────────────────────────────────────────────────────┘ ║
║ ───────────────────────────────── Toast Notification Scenario  ───────────────────────────────── ║
║                                                                                                  ║
║ Toast Scenario Box:                                                                              ║
║                                                                                                  ║
║                                                                                                  ║
║                                                                                                  ║
║ ─────────────────────────────────────── Spinner Scenario ─────────────────────────────────────── ║
║                                                                                                  ║
║ ⠋Pulsing shimmer breathing (claude/shimmer)...                                                   ║
║                                                                                                  ║
║ ⠋Loading model weights...                                                                        ║
║                                                                                                  ║
║ ─────────────────────────────────── Command History Scenario ─────────────────────────────────── ║
║ ╭──────────────────────────────────────────────────────────────────────────────────────────────╮ ║
║ │                                                                                              │ ║
║ │ Command History Navigation                                                                   │ ║
║ │ ➔  ingest first item                                                                         │ ║
║ │    query database                                                                            │ ║
║ │    ingest second item                                                                        │ ║
║ │    query postgres                                                                            │ ║
║ │                                                                                              │ ║
║ ╰──────────────────────────────────────────────────────────────────────────────────────────────╯ ║
║ ─────────────────────────────────────── Resize Scenario  ─────────────────────────────────────── ║
║ ┌──────────────────────────────────────┐                                                         ║
║ │                                      │                                                         ║
║ │ Resize Scenario (Width: 40 columns)  │                                                         ║
║ │                                      │                                                         ║
║ │ ╭──────────────────────────────────╮ │                                                         ║
║ │ │                                  │ │                                                         ║
║ │ │ Flex Grow Content A              │ │                                                         ║
║ │ │                                  │ │                                                         ║
║ │ ╰──────────────────────────────────╯ │                                                         ║
║ │                                      │                                                         ║
║ └──────────────────────────────────────┘                                                         ║
║  [Plan]  Gemini 3.5 Flash        In: 2450 · Out: 890  $0.0125       Rate: ██░░░  'exit' to quit  ║
║                                                                                                  ║
╚══════════════════════════════════════════════════════════════════════════════════════════════════╝"
`;
